--- a/README.textile
+++ b/README.textile
@@ -1,3 +1,7 @@
+h1. WARNING VERY ALPHA
+
+This is the first build of the gem. Use in production at your own imminent -devise- demise.
+
 h1. APN on Mongoid (Apple Push Notifications on Mongoid)
 
 APN on Mongoid is a rewritten fork of the APN on Rails gem. APN stands for Apple Push Notification [Service].
@@ -37,84 +41,4 @@ h3. Bundler:
   gem "apn_on_mongoid", :git => "## GIT ADDR HERE ##"
 </code></pre>
 
-*WORK ON DOCS BELOW*
-
-h2. Setup and Configuration:
-
-You also need to add the following to your Rakefile so you can use the
-Rake tasks that ship with APN on Rails:
-<pre><code>
-  begin
-    require 'apn_on_rails_tasks'
-  rescue MissingSourceFile => e
-    puts e.message
-  end
-</code></pre>
-
-Now, to create the tables you need for APN on Rails, run the following task:
-<pre><code>
-  $ ruby script/generate apn_migrations
-</code></pre>
-
-APN on Rails uses the Configatron gem, http://github.com/markbates/configatron/tree/master, 
-to configure itself. APN on Rails has the following default configurations that you change as you
-see fit:
-
-<pre><code>
-  # development (delivery):
-  configatron.apn.passphrase # => ''
-  configatron.apn.port # => 2195
-  configatron.apn.host # => 'gateway.sandbox.push.apple.com'
-  configatron.apn.cert #=> File.join(RAILS_ROOT, 'config', 'apple_push_notification_development.pem')
-  
-  # production (delivery):
-  configatron.apn.host # => 'gateway.push.apple.com'
-  configatron.apn.cert #=> File.join(RAILS_ROOT, 'config', 'apple_push_notification_production.pem')
-  
-  # development (feedback):
-  configatron.apn.feedback.passphrase # => ''
-  configatron.apn.feedback.port # => 2196
-  configatron.apn.feedback.host # => 'feedback.sandbox.push.apple.com'
-  configatron.apn.feedback.cert #=> File.join(RAILS_ROOT, 'config', 'apple_push_notification_development.pem')
-  
-  # production (feedback):
-  configatron.apn.feedback.host # => 'feedback.push.apple.com'
-  configatron.apn.feedback.cert #=> File.join(RAILS_ROOT, 'config', 'apple_push_notification_production.pem')
-</code></pre>
-
-That's it, now you're ready to start creating notifications.
-
-h3. Upgrade Notes:
-
-If you are upgrading to a new version of APN on Rails you should always run:
-<pre><code>
-  $ ruby script/generate apn_migrations
-</code></pre>
-
-That way you ensure you have the latest version of the database tables needed.
-
-h2. Example:
-
-<pre><code>
-  $ ./script/console
-  >> device = APN::Device.create(:token => "XXXXXXXX XXXXXXXX XXXXXXXX XXXXXXXX XXXXXXXX XXXXXXXX XXXXXXXX XXXXXXXX")
-  >> notification = APN::Notification.new
-  >> notification.device = device
-  >> notification.badge = 5
-  >> notification.sound = true
-  >> notification.alert = "foobar"
-  >> notification.save
-</code></pre>
-
-You can use the following Rake task to deliver your notifications:
-<pre><code>
-  $ rake apn:notifications:deliver
-</code></pre>
-
-The Rake task will find any unsent notifications in the database. If there aren't any notifications
-it will simply do nothing. If there are notifications waiting to be delivered it will open a single connection
-to Apple and push all the notifications through that one connection. Apple does not like people opening/closing
-connections constantly, so it's pretty important that you are careful about batching up your notifications so
-Apple doesn't shut you down.
-
-Released under the MIT license.
+h2. More docs to come!
