--- a/README.textile
+++ b/README.textile
@@ -69,19 +69,33 @@ h2. Example
 
 <pre><code>
   $ rails console
-  >> d = APN::Device.create(:udid => "1a2b3c4d", :token => "XXXXXXXX XXXXXXXX XXXXXXXX XXXXXXXX XXXXXXXX XXXXXXXX XXXXXXXX XXXXXXXX")
+  >> d = APN::Device.create(:udid => "1a2b3c4d")
+  >> a = APN::Application.create(:name => "MyApp", :identififer => "com.acmeinc.myapp")
+  >> s = d.subscriptions.create(:application => a, :token => "XXXXXXXX XXXXXXXX XXXXXXXX XXXXXXXX XXXXXXXX XXXXXXXX XXXXXXXX XXXXXXXX")
   >> n = APN::Notification.new
   >> n.device = d
   >> n.alert = "G'day from APN on Mongoid"
   >> n.sound = "default"
   >> n.badge = 1337
   >> n.save
-  >> APN::Notification.deliver_notifications
+  >> n.deliver
+  ... or ...
+  >> APN::Notifications.deliver
 </code></pre>
+
+The schema is created like so:
+* A device has many subscriptions
+** A subscription is embedded in a device
+* A subscription references an application
+* A notification references a subscription
+
+It is done this way so you can have a registry of devices that can be assigned to multiple applications. This is handy for developers that do have more than one app that uses the APNS and want to use 1 Rails application to control notifications.
+
+For doing once off notifications it is more work than APN on Rails but it is assumed that this gem will be used for services that require Push Notifications delivered regularly and to a large device base.
 
 h2. TODO
 
-* Making APN::Device's and tokens separate allowing for APN::Application's and multiple token registrations for a device for many applications
-** Handy for people with multiple apps under their belt
+* -Making APN::Device's and tokens separate allowing for APN::Application's and multiple token registrations for a device for many applications-
+** -Handy for people with multiple apps under their belt-
 * Investigate using delayed_job for notification delivery rather than rake
 * Examples for using whenever and delivering notifications via cron
